Trying to fix css on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 :root {
-  --font-regular: 1.05rem;
+  --font-regular: 1rem;
   --font-semi-big: 1.25rem;
   --font-big: 1.5rem;
 
